Save local changes before pulling

--- a/Component.html
+++ b/Component.html
@@ -187,12 +187,12 @@
 
     <div class="slider-container">
       <div class="slider" id="slider">
-        <div class="slide" style="background-image: url('133975142303681631.jpg');"></div>
-        <div class="slide" style="background-image: url('133975142371300047.jpg');"></div>
-        <div class="slide" style="background-image: url('133988296863130328.jpg');"></div>
-        <div class="slide" style="background-image: url('133975142303681631.jpg');"></div>
-        <div class="slide" style="background-image: url('133975142371300047.jpg');"></div>
-        <div class="slide" style="background-image: url('133988296863130328.jpg');"></div>
+        <div class="slide" style="background-image: url('WhatsApp Image 2025-09-13 at 18.32.32.jpeg');"></div>
+        <div class="slide" style="background-image: url('WhatsApp Image 2025-09-13 at 18.32.33.jpeg');"></div>
+        <div class="slide" style="background-image: url('WhatsApp Image 2025-09-13 at 18.32.34 (1).jpeg');"></div>
+        <div class="slide" style="background-image: url('WhatsApp Image 2025-09-13 at 18.32.34.jpeg');"></div>
+        <div class="slide" style="background-image: url('WhatsApp Image 2025-09-13 at 18.32.36 (1).jpeg');"></div>
+        <div class="slide" style="background-image: url('WhatsApp Image 2025-09-13 at 18.32.36.jpeg');"></div>
       </div>
     </div>
 
@@ -287,6 +287,8 @@
     let startX = 0;
     let endX = 0;
 
+    const sliderContainer = document.querySelector('.slider-container');
+    
     sliderContainer.addEventListener('touchstart', (e) => {
       startX = e.touches[0].clientX;
     });
