--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
     .slider-container {
       position: relative;
-      width: 300px;
-      height: 600px;
+      width: 350px;
+      height: 700px;
       perspective: 1200px;
       transform-style: preserve-3d;
       background: #FFFFFF;
@@ -41,10 +41,17 @@
       box-shadow: 0 10px 30px rgba(30, 42, 56, 0.1);
     }
 
+    @media (min-width: 1200px) {
+      .slider-container {
+        width: 300px;
+        height: 400px;
+      }
+    }
+
     @media (max-width: 768px) {
       .slider-container {
-        width: 280px;
-        height: 700px;
+        width: 320px;
+        height: 750px;
       }
     }
 
