--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
       justify-content: center;
     }
 
+    @media (max-width: 768px) {
+      .container {
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        padding-top: 80px;
+      }
+    }
+
     .slider-container {
       position: relative;
       width: 350px;
@@ -52,6 +61,10 @@
       .slider-container {
         width: 320px;
         height: 750px;
+        position: relative;
+        top: auto;
+        left: auto;
+        transform: none;
       }
     }
 
@@ -111,7 +124,7 @@
 
     .controls {
       position: absolute;
-      bottom: 50px;
+      bottom: 80px;
       left: 50%;
       transform: translateX(-50%);
       display: flex;
@@ -145,7 +158,7 @@
 
     .dots {
       position: absolute;
-      bottom: 20px;
+      bottom: 50px;
       left: 50%;
       transform: translateX(-50%);
       display: flex;
@@ -210,6 +223,16 @@
       z-index: 20;
       text-align: center;
       line-height: 1.2;
+    }
+
+    @media (max-width: 768px) {
+      .typing-text {
+        position: relative;
+        top: auto;
+        left: auto;
+        transform: none;
+        margin-bottom: 20px;
+      }
     }
 
     .typing-text .line1 {
@@ -348,6 +371,126 @@
       animation: typewriter 1.5s steps(25, end) forwards;
       width: 0;
     }
+
+    /* Swipe Up Button */
+    .swipe-up-container {
+      position: fixed;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 5;
+      text-align: center;
+    }
+
+    .swipe-up-text {
+      font-family: 'Dancing Script', cursive;
+      font-size: 1.3rem;
+      font-weight: 600;
+      color: #1E2A38;
+      margin-bottom: 10px;
+      overflow: hidden;
+      white-space: nowrap;
+      animation: typewriter 1.5s steps(15, end) forwards;
+    }
+
+    .swipe-up-arrow {
+      width: 0;
+      height: 0;
+      border-left: 15px solid transparent;
+      border-right: 15px solid transparent;
+      border-bottom: 20px solid #4A90E2;
+      margin: 0 auto;
+      animation: bounce 2s infinite;
+    }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes bounce {
+      0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+      }
+      40% {
+        transform: translateY(-10px);
+      }
+      60% {
+        transform: translateY(-5px);
+      }
+    }
+
+    /* Description Popup */
+    .description-popup {
+      position: fixed;
+      bottom: -100vh;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      background: linear-gradient(135deg, #F2F2F2 0%, #FFFFFF 100%);
+      z-index: 25;
+      transition: bottom 0.5s ease-in-out;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 40px 20px;
+      box-shadow: 0 -10px 30px rgba(30, 42, 56, 0.2);
+    }
+
+    .description-popup.show {
+      bottom: 0;
+    }
+
+    .description-content {
+      max-width: 600px;
+      text-align: center;
+    }
+
+    .description-title {
+      font-family: 'Dancing Script', cursive;
+      font-size: 3rem;
+      font-weight: 700;
+      color: #1E2A38;
+      margin-bottom: 30px;
+    }
+
+    .description-text {
+      font-family: 'Arial', sans-serif;
+      font-size: 1.2rem;
+      line-height: 1.8;
+      color: #4A90E2;
+      margin-bottom: 40px;
+    }
+
+    .close-button {
+      background: #F76C6C;
+      color: #FFFFFF;
+      border: none;
+      padding: 15px 30px;
+      border-radius: 25px;
+      font-size: 1.1rem;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    .close-button:hover {
+      background: #1E2A38;
+      transform: scale(1.05);
+    }
+
+    @media (max-width: 768px) {
+      .swipe-up-container {
+        bottom: 15px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -430,10 +573,25 @@
       <button class="btn" data-slide="5">6</button>
     </div>
 
-    <div class="dots">
-      <div class="dot active" data-slide="0"></div>
-      <div class="dot" data-slide="1"></div>
-      <div class="dot" data-slide="2"></div>
+  
+  </div>
+
+  <!-- Swipe Up Button -->
+  <div class="swipe-up-container" id="swipeUpButton">
+    <div class="swipe-up-text">Swipe up to know me</div>
+    <div class="swipe-up-arrow"></div>
+  </div>
+
+  <!-- Description Popup -->
+  <div class="description-popup" id="descriptionPopup">
+    <div class="description-content">
+      <h2 class="description-title">About Zainab</h2>
+      <p class="description-text">
+        I am a passionate marketing professional with expertise in digital marketing, brand strategy, and creative campaigns. 
+        With years of experience in the industry, I help businesses grow their online presence and connect with their target audience. 
+        My approach combines data-driven insights with creative storytelling to deliver impactful marketing solutions.
+      </p>
+      <button class="close-button" onclick="closePopup()">Close</button>
     </div>
   </div>
 
@@ -535,6 +693,50 @@
         }
       }
     }
+
+    // Swipe Up Functionality
+    const swipeUpButton = document.getElementById('swipeUpButton');
+    const descriptionPopup = document.getElementById('descriptionPopup');
+    
+    let startY = 0;
+    let endY = 0;
+
+    swipeUpButton.addEventListener('touchstart', (e) => {
+      startY = e.touches[0].clientY;
+    });
+
+    swipeUpButton.addEventListener('touchend', (e) => {
+      endY = e.changedTouches[0].clientY;
+      handleSwipeUp();
+    });
+
+    swipeUpButton.addEventListener('click', () => {
+      openPopup();
+    });
+
+    function handleSwipeUp() {
+      const threshold = 50;
+      const diff = startY - endY;
+      
+      if (diff > threshold) {
+        openPopup();
+      }
+    }
+
+    function openPopup() {
+      descriptionPopup.classList.add('show');
+    }
+
+    function closePopup() {
+      descriptionPopup.classList.remove('show');
+    }
+
+    // Close popup when clicking outside
+    descriptionPopup.addEventListener('click', (e) => {
+      if (e.target === descriptionPopup) {
+        closePopup();
+      }
+    });
   </script>
 </body>
 </html>
