--- a/index.html
+++ b/index.html
@@ -486,6 +486,71 @@
       transform: scale(1.05);
     }
 
+    /* Loading Animation */
+    .loading-container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #F2F2F2;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+      transition: opacity 0.5s ease-out;
+    }
+
+    .loading-container.hidden {
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    .loading-text {
+      font-family: 'Dancing Script', cursive;
+      font-size: 2rem;
+      font-weight: 600;
+      color: #1E2A38;
+      margin-bottom: 30px;
+    }
+
+    .loading-dots {
+      display: flex;
+      gap: 10px;
+    }
+
+    .loading-dot {
+      width: 15px;
+      height: 15px;
+      border-radius: 50%;
+      background: #4A90E2;
+      animation: loadingBounce 1.4s ease-in-out infinite both;
+    }
+
+    .loading-dot:nth-child(1) {
+      animation-delay: -0.32s;
+    }
+
+    .loading-dot:nth-child(2) {
+      animation-delay: -0.16s;
+    }
+
+    .loading-dot:nth-child(3) {
+      animation-delay: 0s;
+    }
+
+    @keyframes loadingBounce {
+      0%, 80%, 100% {
+        transform: scale(0);
+        opacity: 0.5;
+      }
+      40% {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
+
     @media (max-width: 768px) {
       .swipe-up-container {
         bottom: 15px;
@@ -494,6 +559,16 @@
   </style>
 </head>
 <body>
+  <!-- Loading Animation -->
+  <div class="loading-container" id="loadingContainer">
+    <div class="loading-text">Loading...</div>
+    <div class="loading-dots">
+      <div class="loading-dot"></div>
+      <div class="loading-dot"></div>
+      <div class="loading-dot"></div>
+    </div>
+  </div>
+
   <!-- Social Media Typing Text -->
   <div class="social-text instagram">
     <div class="line">Visit my Instagram</div>
@@ -596,6 +671,49 @@
   </div>
 
   <script>
+    // Loading Animation
+    const loadingContainer = document.getElementById('loadingContainer');
+    const images = [
+      'WhatsApp Image 2025-09-13 at 18.32.32.jpeg',
+      'WhatsApp Image 2025-09-13 at 18.32.33.jpeg',
+      'WhatsApp Image 2025-09-13 at 18.32.34 (1).jpeg',
+      'WhatsApp Image 2025-09-13 at 18.32.34.jpeg',
+      'WhatsApp Image 2025-09-13 at 18.32.36 (1).jpeg',
+      'WhatsApp Image 2025-09-13 at 18.32.36.jpeg'
+    ];
+
+    let loadedImages = 0;
+    const totalImages = images.length;
+
+    function hideLoading() {
+      loadingContainer.classList.add('hidden');
+      setTimeout(() => {
+        loadingContainer.style.display = 'none';
+      }, 500);
+    }
+
+    function checkAllImagesLoaded() {
+      loadedImages++;
+      if (loadedImages === totalImages) {
+        hideLoading();
+      }
+    }
+
+    // Preload images
+    images.forEach(imageSrc => {
+      const img = new Image();
+      img.onload = checkAllImagesLoaded;
+      img.onerror = checkAllImagesLoaded; // Also count as loaded if error
+      img.src = imageSrc;
+    });
+
+    // Fallback: hide loading after 3 seconds regardless
+    setTimeout(() => {
+      if (loadedImages < totalImages) {
+        hideLoading();
+      }
+    }, 3000);
+
     const slider = document.getElementById('slider');
     const buttons = document.querySelectorAll('.btn');
     const dots = document.querySelectorAll('.dot');
